# libtt

./: .devboxrc  .gitignore  CMakeLists.txt  README.md  conanfile.txt
lib/: CMakeLists.txt
lib/00_core/: CMakeLists.txt
lib/00_core/include/libtt/core/: var_name_generator.hpp
lib/00_core/src/: var_name_generator.cpp
lib/01_untyp/: CMakeLists.txt
lib/01_untyp/include/libtt/: untyp.hpp
lib/01_untyp/include/libtt/untyp/: alpha_equivalence.hpp  beta_reduction.hpp  pretty_print.hpp  rename.hpp  replace.hpp  substitute.hpp  subterms.hpp  term.hpp  y_combinator.hpp
lib/01_untyp/include/libtt/untyp/detail/: renaming_context.hpp  tmp_var_generator.hpp
lib/01_untyp/src/: alpha_equivalence.cpp  beta_reduction.cpp  pretty_print.cpp  rename.cpp  replace.cpp  substitute.cpp  subterms.cpp  term.cpp  untyp.cpp  y_combinator.cpp
lib/01_untyp/src/detail/: renaming_context.cpp  tmp_var_generator.cpp
lib/02_typed/: CMakeLists.txt
lib/02_typed/include/libtt/typed/: alpha_equivalence.hpp  beta_reduction.hpp  derivation.hpp  legal_term.hpp  pre_typed_term.hpp  pretty_print.hpp  type.hpp
lib/02_typed/src/: alpha_equivalence.cpp  beta_reduction.cpp  derivation.cpp  legal_term.cpp  pre_typed_term.cpp  pretty_print.cpp  type.cpp
lib/03_pityp/: CMakeLists.txt
lib/03_pityp/include/libtt/pityp/: alpha_equivalence.hpp  beta_reduction.hpp  derivation.hpp  legal_term.hpp  pre_typed_term.hpp  pretty_print.hpp  type.hpp
lib/03_pityp/src/: alpha_equivalence.cpp  beta_reduction.cpp  derivation.cpp  legal_term.cpp  pre_typed_term.cpp  pretty_print.cpp  type.cpp
test/: CMakeLists.txt
test/01_untyp/: CMakeLists.txt  untyp_alpha_equivalence_tests.cpp  untyp_beta_reduction_tests.cpp  untyp_term_tests.cpp  untyp_tests.cpp
test/02_typed/: CMakeLists.txt  derivation_tests.cpp  legal_term_beta_reduction_tests.cpp  legal_term_substitution_tests.cpp  legal_term_tests.cpp  pre_typed_term_tests.cpp  simple_type_tests.cpp  term_search_tests.cpp  type_assign_tests.cpp
test/03_pityp/: CMakeLists.txt  pi_type_tests.cpp  pityp_beta_reduction_tests.cpp  pityp_context_tests.cpp  pityp_derivation_tests.cpp  pityp_legal_term_tests.cpp  pityp_term_search_tests.cpp  pityp_term_tests.cpp
tools/devbox/: build-image.sh  devbox.Dockerfile  devbox.sh
